# lvfs

./: .gitmodules  CMakeLists.txt
cmake/: FindLvfs.cmake
include/: Desktop  Error  IApplication  IApplications  IDirectory  IEntry  IFile  IFsFile  IType  Interface  Package  Singleton
include/plugins/: IContentPlugin  IDataPlugin  IPlugin  IProtocolPlugin  IRootPlugin  Package
include/plugins/fs/: IPermissions
src/: lvfs_Error.cpp  lvfs_Error.h  lvfs_IApplication.cpp  lvfs_IApplication.h  lvfs_IApplications.cpp  lvfs_IApplications.h  lvfs_IDirectory.cpp  lvfs_IDirectory.h  lvfs_IEntry.cpp  lvfs_IEntry.h  lvfs_IFile.cpp  lvfs_IFile.h  lvfs_IFsFile.cpp  lvfs_IFsFile.h  lvfs_IProperties.cpp  lvfs_IProperties.h  lvfs_IStream.cpp  lvfs_IStream.h  lvfs_IType.cpp  lvfs_IType.h  lvfs_Interface.cpp  lvfs_Interface.h  lvfs_Module.cpp  lvfs_Module.h  lvfs_Singleton.cpp  lvfs_Singleton.h
src/desktop/: lvfs_Desktop.cpp  lvfs_Desktop.h  lvfs_MimeType.cpp  lvfs_MimeType.h
src/desktop/unix/: lvfs_AppsCache_p.h  lvfs_Cache_p.h  lvfs_Desktop_p.h  lvfs_IconCache_p.h
src/desktop/unix/gtk/: desktop_gtk_p.h
src/desktop/unix/kde/: desktop_kde_p.h
src/plugins/: lvfs_IContentPlugin.cpp  lvfs_IContentPlugin.h  lvfs_IDataPlugin.cpp  lvfs_IDataPlugin.h  lvfs_IPackage.cpp  lvfs_IPackage.h  lvfs_IPlugin.cpp  lvfs_IPlugin.h  lvfs_IProtocolPlugin.cpp  lvfs_IProtocolPlugin.h  lvfs_IRootPlugin.cpp  lvfs_IRootPlugin.h  lvfs_Package.cpp  lvfs_Package.h
src/plugins/default/: lvfs_default_DefaultFile.cpp  lvfs_default_DefaultFile.h  lvfs_default_Directory.cpp  lvfs_default_Directory.h  lvfs_default_Entry.cpp  lvfs_default_Entry.h  lvfs_default_File.cpp  lvfs_default_File.h  lvfs_default_IPermissions.cpp  lvfs_default_IPermissions.h  lvfs_default_ProtocolPlugin.cpp  lvfs_default_ProtocolPlugin.h  lvfs_default_RootPlugin.cpp  lvfs_default_RootPlugin.h
src/settings/: lvfs_settings_Instance.cpp  lvfs_settings_Instance.h  lvfs_settings_IntOption.cpp  lvfs_settings_IntOption.h  lvfs_settings_List.cpp  lvfs_settings_List.h  lvfs_settings_Option.cpp  lvfs_settings_Option.h  lvfs_settings_Scope.cpp  lvfs_settings_Scope.h  lvfs_settings_StringOption.cpp  lvfs_settings_StringOption.h  lvfs_settings_Visitor.cpp  lvfs_settings_Visitor.h
